fixed text alignment on main page

--- a/client/src/components/SaleItems/SaleItems.module.css
+++ b/client/src/components/SaleItems/SaleItems.module.css
@@ -40,11 +40,15 @@
 
 .imgDiv {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .imgDiv p {
   font-size: 0.8em;
+}
+
+.moveRight {
+  text-align: right;
 }
 
 /* .card img {
